rpi5/audiomuse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiomuse
  labels:
    app: audiomuse
    component: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiomuse
      component: flask
  template:
    metadata:
      name: audiomuse
      labels:
        app: audiomuse
        component: flask
    spec:
      containers:
        - name: audiomuse
          image: ghcr.io/neptunehub/audiomuse-ai:3.6.3@sha256:301b2d5c280f43c6e79823337455b6b7d575d7b8040a6f150266804350c51eab
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /app/temp_audio
              name: app-temp-audio
      restartPolicy: Always
      volumes:
        - name: app-temp-audio
          emptyDir: {}
