rpi5/audiomuse/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiomuse-worker
  labels:
    app: audiomuse
    component: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: audiomuse
      component: worker
  template:
    metadata:
      name: audiomuse-worker
      labels:
        app: audiomuse
        component: worker
    spec:
      containers:
        - name: audiomuse
          image: ghcr.io/neptunehub/audiomuse-ai:3.6.3@sha256:301b2d5c280f43c6e79823337455b6b7d575d7b8040a6f150266804350c51eab
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "1"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /app/temp_audio
              name: app-temp-audio
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      volumes:
        - name: app-temp-audio
          emptyDir: {}
